feat: added endpoint to get the workflow execution statistics for a namespace
