# api/api.swagger.json
@@ -918,6 +918,36 @@
         ]
       }
     },
+    "/apis/v1beta1/{namespace}/workflow_executions/statistics": {
+      "get": {
+        "operationId": "GetWorkflowExecutionStatisticsForNamespace",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetWorkflowExecutionStatisticsForNamespaceResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "namespace",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "WorkflowService"
+        ]
+      }
+    },
     "/apis/v1beta1/{namespace}/workflow_executions/{uid}": {
       "get": {
         "operationId": "GetWorkflowExecution",
@@ -2786,6 +2816,14 @@
           "items": {
             "$ref": "#/definitions/Metric"
           }
+        }
+      }
+    },
+    "GetWorkflowExecutionStatisticsForNamespaceResponse": {
+      "type": "object",
+      "properties": {
+        "stats": {
+          "$ref": "#/definitions/WorkflowExecutionStatisticReport"
         }
       }
     },
